[css-grid] Fix simplified layout of positioned grid items

When a simplifiedLayout() is performed the method, for example
when a positioned item is moved, LayoutGrid::layoutPositionedObjects()
was not called. So the positioned items were not properly painted.
To fix this we're properly overriding layoutPositionedObjects().

However we've to be careful and protect simplifiedLayout()
so we don't perform it when we've positioned items and a dirty grid,
otherwise we'll have troubles as layoutPositionedObjects() uses m_grid.

On top of that, a new condition has been added into
LayoutBox::updateGridPositionAfterStyleChange(), as for positioned items
we don't need to mark the grid as dirty if they change the position.

BUG=662049
TEST=fast/css-grid-layout/grid-positioned-item-dynamic-change-expected.html

Review-Url: https://codereview.chromium.org/2471283004
Cr-Commit-Position: refs/heads/master@{#430401}

Former-commit-id: 3c5effd4207aa48645264de4eaf3bca6c222ce71